log
Thu May  5 00:55:45 UTC 2022: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
9ac5c7d
Thu May  5 00:56:15 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cebbc70
Thu May  5 00:57:02 UTC 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
1d26746
Thu May  5 00:58:22 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
74521ab
Thu May  5 01:00:26 UTC 2022: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:23:19: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
     return dato[0]->data;
                   ^~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8cffc3d
Thu May  5 01:00:37 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
32ffc1d
Thu May  5 01:01:45 UTC 2022: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|3
total_score: 10/70
9d8dda7
Thu May  5 01:03:05 UTC 2022: 
 heap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:23:11: error: ‘Heap {aka struct Heap}’ has no member named ‘hearArray’; did you mean ‘heapArray’?
   if (pq->hearArray == NULL) return NULL;
           ^~~~~~~~~
           heapArray
heap.c:25:14: error: ‘Heap {aka struct Heap}’ has no member named ‘hearArray’; did you mean ‘heapArray’?
   return pq->hearArray[0].data;
              ^~~~~~~~~
              heapArray
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
958b1eb
Thu May  5 01:03:22 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
b1812da
Thu May  5 01:03:54 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:23:24: error: invalid operands to binary == (have ‘heapElem {aka struct nodo}’ and ‘void *’)
   if (pq->heapArray[0] == NULL) return NULL;
       ~~~~~~~~~~~~~~~~ ^~
Compilation failed
b7511f1
Thu May  5 01:04:12 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c303ddd
Thu May  5 01:05:08 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
9c947f0
Thu May  5 01:05:25 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
2e22547
Thu May  5 01:25:14 UTC 2022: 
 heap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_pop’:
heap.c:42:29: error: incompatible types when assigning to type ‘heapElem {aka struct nodo}’ from type ‘void *’
   pq->heapArray[pq->size-1] = NULL;
                             ^
Compilation failed
75e3692
Thu May  5 01:25:52 UTC 2022: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|2
total_score: 35/70
4367a43
Thu May  5 01:32:07 UTC 2022: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 35/70
7399a25
Thu May  5 01:42:20 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_pop’:
heap.c:42:8: error: incompatible type for argument 1 of ‘free’
   free(pq->heapArray[pq->size-1]);
        ^~
In file included from test.c:2:0:
/usr/include/stdlib.h:563:13: note: expected ‘void *’ but argument is of type ‘heapElem {aka struct nodo}’
 extern void free (void *__ptr) __THROW;
             ^~~~
Compilation failed
01e2105
Thu May  5 01:44:08 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_pop’:
heap.c:42:29: error: incompatible types when assigning to type ‘heapElem {aka struct nodo}’ from type ‘void *’
   pq->heapArray[pq->size-1] = NULL;
                             ^
Compilation failed
8ccd1aa
Thu May  5 01:44:21 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 35/70
103e4ad
